# lam

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: LamBuildMeta.cmake  LamConfig.cmake.in  LamCxxModuleStd.cmake
interop/: CMakeLists.txt  ext_fields.md
interop/benchmarks/: CMakeLists.txt  benchmark_ntt_pure.cpp  benchmark_ntt_vector_vs_array.cpp  benchmark_ntt_vs_naive.cpp  benchmark_ntt_vs_ntl.cpp  benchmark_parallel_ntt.cpp  ntl_benchmark_impl.cpp
interop/cmake/: InteropHelpers.cmake
interop/examples/: CMakeLists.txt  finite_field_roots.cpp  finite_field_stress_test.cpp  root_finding_demo.cpp
interop/examples/compatibility/: bitvector_ctbignum_interop.cpp  ctbignum_compat.cpp  roots_brute_force.cpp
interop/src/: lam-interop-extra.cppm  lam-interop.cppm
interop/tests/: CMakeLists.txt  berlekamp.cpp  check_kyber_poly.cpp  finite_field_extension_test.cpp  finite_field_traits_test.cpp  lagrange_test_finite_field.cpp  ntt_array_test.cpp  ntt_constexpr_test.cpp  ntt_interop_test.cpp  ntt_properties.cpp  poly_inv.cpp  poly_rem_finite_field.cpp  roots_finite_field.cpp
vcpp/: CMakeLists.txt  LICENSE
vcpp/editor/: Dockerfile  docker-compose.yml
vcpp/editor/examples/: bouncing_ball.cppm  hello_sphere.cppm  solar_system.cppm
vcpp/editor/frontend/: index.html
vcpp/editor/frontend/src/: main.js
vcpp/editor/frontend/styles/: editor.css
vcpp/editor/prebuilt/: collect_artifacts.sh  prebuild.sh
vcpp/editor/server/: compiler.go  go.mod  main.go  router.go  session.go  worker_pool.go
vcpp/editor/templates/: runner.html  shell.html
vcpp/examples/: CMakeLists.txt  basic_test.cppm  main.cpp
vcpp/examples/web/: CMakeLists.txt  graph_instance.js  graph_manager.js  index.html  main.cpp  shell.html  web_test.cppm
vcpp/src/: metal_surface.mm  vcpp-color.cppm  vcpp-coro.cppm  vcpp-graph-base.cppm  vcpp-graph-bridge.cppm  vcpp-graph-objects.cppm  vcpp-input.cppm  vcpp-label-bridge.cppm  vcpp-loop.cppm  vcpp-mesh.cppm  vcpp-object-base.cppm  vcpp-objects.cppm  vcpp-props.cppm  vcpp-render-interface.cppm  vcpp-render-resources.cppm  vcpp-render-types.cppm  vcpp-scene.cppm  vcpp-shapes.cppm  vcpp-text-glyphs.cppm  vcpp-traits.cppm  vcpp-vec.cppm  vcpp.cppm  vcpp_wgpu.cppm  vcpp_wgpu_web.cppm
vcpp/tests/: CMakeLists.txt  test_coro.cpp
